# IndoLocate

./: .gitignore  BeamForming.ipynb  LICENSE  ML.ipynb  Makefile  README.md  axci-tool.md  dataset.ipynb  emulator.py  enviornment.yaml  environment.yml  generic.md  pyproject.toml  requirment.txt  setup.py  standalone.md  train.py
CSI5G/: capture.sh  config5GHZ.sh  convertpcap.sh  nexutil  quicksetup.sh  relife.sh  reload.sh  resetfilters.sh  runap.sh  sendsta.sh  setcsicore.sh  setcsinss.sh  setdelay.sh  setmacfilter.sh  setsourceinfo.sh  settxcore.sh  settxpower.sh
indolocate/: __init__.py
indolocate/algorithms/: __init__.py
indolocate/algorithms/beamformers/: MUSIC.py  __init__.py
indolocate/algorithms/ml/: __init__.py  dnn.py  gbdt.py  knn.py  lstm.py  rf.py  svm.py  test.py
indolocate/configs/: knn.yaml  lstm.yaml  rf.yaml
indolocate/utils/: __init__.py  debug.py  evaluators.py  loaders.py  metrics.py  preprocess.py
licenses/: UbiLocate.txt
scripts/: IndoLocate.m  csireader  extract_angle.m  get_subcarriers.m  preprocess.sh
scripts/captureData/: AllData.pcap  extreme.pcap  middle.pcap
scripts/matlabData/: data.mat
src/indolocate/: __init__.py  __main__.py  app.py  structs.py  web.py  wsgi.py
src/indolocate/algorithms/: __init__.py  base.py  knn.py  linear.py  nonlinear.py  svm.py
src/indolocate/algorithms/configs/: deepfi.yaml  dnn.yaml  gbdt.yaml  knn.yaml  lasso_reg.yaml  linear_reg.yaml  polynomial_reg.yaml  (+1 more)
src/indolocate/analysis/: __init__.py  metrics.py  plots.py
src/indolocate/utils/: __init__.py  datasplitter.py  preprocess.py
