[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indolocate"
version = "0.1.0"
description = "A modular framework for indoor localization using WiFi."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Aravind Potluri", email = "aravindswami135@gmail.com"}
]

dependencies = [
]

[project.urls]
Homepage = "https://github.com/cipherswami/Indolocate"

[project.optional-dependencies]
dev = ["pytest"]
docs = ["mkdocs", "mkdocstrings[python]"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
indolocate = ["algorithms/configs/*.yaml"]
